--- a/dir_bd02518d4f499cf99d7b393e1af10b35.html
+++ b/dir_bd02518d4f499cf99d7b393e1af10b35.html
@@ -99,6 +99,10 @@ $(document).ready(function(){initNavTree('dir_bd02518d4f499cf99d7b393e1af10b35.h
   <div class="headertitle"><div class="title">Runtime Directory Reference</div></div>
 </div><!--header-->
 <div class="contents">
+<table class="memberdecls">
+<tr class="heading"><td colspan="2"><h2 class="groupheader"><a id="subdirs" name="subdirs"></a>
+Directories</h2></td></tr>
+</table>
 </div><!-- contents -->
 </div><!-- doc-content -->
 <!-- start footer part -->
