--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Installation</h1>
 <p ><img src="https://user-images.githubusercontent.com/23442063/163601100-191d8699-f4fd-42cc-96d4-f6aa5a8ae29b.png" alt="HexagonalUI" class="inline"/></p>
 <p >Select <code>Add package from git URL...</code> and paste the following URL:</p>
 <div class="fragment"><div class="line">https://github.com/mpewsey/ManiaMap.Unity.git</div>
-</div><!-- fragment --><p >NOTE: To lock into a specific version, append <code>#{VERSION_TAG}</code> to the end of the URL. For example:</p>
+</div><!-- fragment --><p >RECOMMENDED: To lock into a specific version, append <code>#{VERSION_TAG}</code> to the end of the URL. For example:</p>
 <div class="fragment"><div class="line">https://github.com/mpewsey/ManiaMap.Unity.git#v1.0.0</div>
 </div><!-- fragment --> </div></div><!-- PageDoc -->
 </div><!-- contents -->
