--- a/namespace_m_pewsey_1_1_mania_map_1_1_unity_1_1_editor.html
+++ b/namespace_m_pewsey_1_1_mania_map_1_1_unity_1_1_editor.html
@@ -152,6 +152,8 @@ Classes</h2></td></tr>
 </table>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p >Contains editor customizations. </p>
+<p >Contains components for setting up samples. </p>
+<p >Contains editor customizations for drawing components. </p>
 </div></div><!-- contents -->
 </div><!-- doc-content -->
 <!-- start footer part -->
