deploy: db3adda569f675acc1066c3c864ca3c50262b12b

--- a/class_m_pewsey_1_1_mania_map_1_1_unity_1_1_generation_input.html
+++ b/class_m_pewsey_1_1_mania_map_1_1_unity_1_1_generation_input.html
@@ -111,7 +111,7 @@ Inheritance diagram for MPewsey.ManiaMap.Unity.GenerationInput:</div>
  <div class="center">
   <img src="class_m_pewsey_1_1_mania_map_1_1_unity_1_1_generation_input.png" usemap="#MPewsey.ManiaMap.Unity.GenerationInput_map" alt=""/>
   <map id="MPewsey.ManiaMap.Unity.GenerationInput_map" name="MPewsey.ManiaMap.Unity.GenerationInput_map">
-<area href="class_m_pewsey_1_1_mania_map_1_1_unity_1_1_collectable_groups_input.html" alt="MPewsey.ManiaMap.Unity.CollectableGroupsInput" shape="rect" coords="0,112,326,136"/>
+<area href="class_m_pewsey_1_1_mania_map_1_1_unity_1_1_collectable_groups_input.html" title="A generation input for supplying collectable groups to a GenerationPipeline." alt="MPewsey.ManiaMap.Unity.CollectableGroupsInput" shape="rect" coords="0,112,326,136"/>
 <area href="class_m_pewsey_1_1_mania_map_1_1_unity_1_1_generation_named_input.html" title="The base component for adding a named input to a GenerationPipeline." alt="MPewsey.ManiaMap.Unity.GenerationNamedInput&lt; T &gt;" shape="rect" coords="336,112,662,136"/>
 <area href="class_m_pewsey_1_1_mania_map_1_1_unity_1_1_layout_graphs_input.html" title="A generation input for supplying layout graphs inputs to a pipeline." alt="MPewsey.ManiaMap.Unity.LayoutGraphsInput" shape="rect" coords="672,112,998,136"/>
   </map>
