deploy: c756ca3d7291c58e29833319131fcd522444592c

--- a/index.html
+++ b/index.html
@@ -99,8 +99,12 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
   <div class="headertitle"><div class="title">ManiaMap.Unity </div></div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><p ><a class="anchor" id="md__github_workspace_README"></a> <a href="https://mpewsey.github.io/ManiaMap.Unity"><img src="https://github.com/mpewsey/ManiaMap.Unity/workflows/Docs/badge.svg?event=push" alt="Docs" style="pointer-events: none;" class="inline"/></a></p>
+<div class="textblock"><p ><a class="anchor" id="md__github_workspace_README"></a> <a href="https://mpewsey.github.io/ManiaMap.Unity"><img src="https://github.com/mpewsey/ManiaMap.Unity/workflows/Docs/badge.svg?event=push" alt="Docs" style="pointer-events: none;" class="inline"/></a> <img src="https://img.shields.io/github/v/tag/mpewsey/ManiaMap.Unity?label=Version" alt="Version" class="inline"/></p>
 <h1><a class="anchor" id="autotoc_md1"></a>
+About</h1>
+<p >This package provides components for interfacing the <a href="https://github.com/mpewsey/ManiaMap">ManiaMap</a> procedural layout generator with Unity.</p>
+<p ><img src="https://user-images.githubusercontent.com/23442063/158001876-cb3962a8-9826-44e9-bb19-a5779e3f99d6.png" alt="BigMap" class="inline"/></p>
+<h1><a class="anchor" id="autotoc_md2"></a>
 Installation</h1>
 <p >To add the package to a project, in Unity, select <code>Window &gt; Package Manager</code>.</p>
 <p ><img src="https://user-images.githubusercontent.com/23442063/163601100-191d8699-f4fd-42cc-96d4-f6aa5a8ae29b.png" alt="HexagonalUI" class="inline"/></p>
