deploy: ac8ce6a791dbda9ce0d61097cedbca1bd47d742d

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
   <div class="headertitle"><div class="title">ManiaMap.Unity </div></div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><p ><a class="anchor" id="md__github_workspace_README"></a> <a href="https://mpewsey.github.io/ManiaMap.Unity"><img src="https://github.com/mpewsey/ManiaMap.Unity/workflows/Docs/badge.svg?event=push" alt="Docs" style="pointer-events: none;" class="inline"/></a> <img src="https://img.shields.io/github/v/tag/mpewsey/ManiaMap.Unity?label=Version" alt="Version" class="inline"/></p>
+<div class="textblock"><p ><a class="anchor" id="md__github_workspace_README"></a> <a href="https://mpewsey.github.io/ManiaMap.Unity"><img src="https://github.com/mpewsey/ManiaMap.Unity/workflows/Docs/badge.svg?event=push" alt="Docs" style="pointer-events: none;" class="inline"/></a> <img src="https://img.shields.io/badge/Unity-%E2%89%A5%202021.2-blue" alt="Unity ≥ 2021.2" class="inline"/> <img src="https://img.shields.io/github/v/tag/mpewsey/ManiaMap.Unity?label=Version" alt="Version" class="inline"/></p>
 <h1><a class="anchor" id="autotoc_md1"></a>
 About</h1>
 <p >This package provides components for interfacing the <a href="https://github.com/mpewsey/ManiaMap">ManiaMap</a> procedural layout generator with Unity.</p>
