deploy: f4f09b2ce959f97346d189def67f1683788ce921

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Creating Collectable Spots</h3>
 <h3><a class="anchor" id="autotoc_md8"></a>
 Saving Room Templates</h3>
 <ol type="1">
-<li>Select the Room and click the <code>Save Template</code> button. The data for the room template will be saved in the <code>ManiaMap &gt; RoomTemplates</code> directory of the project. Alternately, use the <code>Mania Map &gt; Batch Save Templates</code> command to save room templates for all prefabs in the project with a Room component at its root.</li>
+<li>Ensure that any rooms are saved as prefabs within the project. Next, select <code>Mania Map &gt; Batch Save Templates</code> from the menu to save room templates for all room prefabs discovered within the project. Note that the settings for this action may be configured in the settings at <code>Resources/ManiaMap/TemplateSaveSettings</code> once the action has been run once.</li>
 </ol>
 <h2><a class="anchor" id="autotoc_md9"></a>
 Step 2: Create Room Template Groups</h2>
