deploy: f991db6a69903d168638b270c7e4d49fca0712b2

--- a/struct_m_pewsey_1_1_mania_map_1_1_unity_1_1_room_database_1_1_entry.html
+++ b/struct_m_pewsey_1_1_mania_map_1_1_unity_1_1_room_database_1_1_entry.html
@@ -134,7 +134,7 @@ Private Attributes</h2></td></tr>
 <div class="textblock"><p >A room database entry containing a room ID and room data source. </p>
 <dl class="tparams"><dt>Template Parameters</dt><dd>
   <table class="tparams">
-    <tr><td class="paramname">T</td><td>The room data source type.</td></tr>
+    <tr><td class="paramname">U</td><td>The room prefab type.</td></tr>
   </table>
   </dd>
 </dl>
