--- a/class_m_pewsey_1_1_mania_map_1_1_unity_1_1_room_database.html
+++ b/class_m_pewsey_1_1_mania_map_1_1_unity_1_1_room_database.html
@@ -166,7 +166,7 @@ Private Attributes</h2></td></tr>
 <div class="textblock"><p >A base class for creating a room data source database. </p>
 <dl class="tparams"><dt>Template Parameters</dt><dd>
   <table class="tparams">
-    <tr><td class="paramname">T</td><td>The room data source type.</td></tr>
+    <tr><td class="paramname">T</td><td>The room prefab type.</td></tr>
   </table>
   </dd>
 </dl>
