--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ About</h1>
 <h1><a class="anchor" id="autotoc_md2"></a>
 Installation</h1>
 <p >To add the package to a project, in Unity, select <code>Window &gt; Package Manager</code>.</p>
-<p ><img src="https://user-images.githubusercontent.com/23442063/163601100-191d8699-f4fd-42cc-96d4-f6aa5a8ae29b.png" alt="HexagonalUI" class="inline"/></p>
+<p ><img src="https://user-images.githubusercontent.com/23442063/163601100-191d8699-f4fd-42cc-96d4-f6aa5a8ae29b.png" alt="Unity Package Manager" class="inline"/></p>
 <p >Select <code>Add package from git URL...</code> and paste the following URL:</p>
 <div class="fragment"><div class="line">https://github.com/mpewsey/ManiaMap.Unity.git</div>
 </div><!-- fragment --><p >RECOMMENDED: To lock into a specific version, append <code>#{VERSION_TAG}</code> to the end of the URL. For example:</p>
