--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Step 4: Create Generation Pipeline</h2>
 </ol>
 <p ><img src="https://user-images.githubusercontent.com/23442063/175828818-3a0a09da-69d8-4d60-a48c-b69d4ceac374.png" alt="Generation Pipeline" class="inline"/></p>
 <ol type="1">
-<li>To run the pipeline and generate a layout, run the <code>Generate</code> method from a script.</li>
+<li>To run the pipeline and generate a layout, run the <code>Run</code> method from a script.</li>
 </ol>
 <div class="fragment"><div class="line">{Generate.cs} </div>
 <div class="line">var results = Pipeline.Run();</div>
