deploy: 1be3e470e7d6ca377a0efdf6cb5f3a33e086093e

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@ About</h1>
 <p ><img src="https://user-images.githubusercontent.com/23442063/158001876-cb3962a8-9826-44e9-bb19-a5779e3f99d6.png" alt="BigMap" class="inline"/></p>
 <h1><a class="anchor" id="autotoc_md2"></a>
 Installation</h1>
-<p >To add the package to a project, in Unity, select <code>Window &gt; Package Manager</code>.</p>
+<p >In Unity, select <code>Window &gt; Package Manager</code>.</p>
 <p ><img src="https://user-images.githubusercontent.com/23442063/163601100-191d8699-f4fd-42cc-96d4-f6aa5a8ae29b.png" alt="Unity Package Manager" class="inline"/></p>
 <p >Select <code>Add package from git URL...</code> and paste the following URL:</p>
 <div class="fragment"><div class="line">https://github.com/mpewsey/ManiaMap.Unity.git</div>
-</div><!-- fragment --><p >RECOMMENDED: To lock into a specific version, append <code>#{VERSION_TAG}</code> to the end of the URL. For example:</p>
-<div class="fragment"><div class="line">https://github.com/mpewsey/ManiaMap.Unity.git#v1.0.0</div>
+</div><!-- fragment --><p >To lock into a specific version, append <code>#{VERSION_TAG}</code> to the end of the URL. For example:</p>
+<div class="fragment"><div class="line">https://github.com/mpewsey/ManiaMap.Unity.git#v0.0.3</div>
 </div><!-- fragment --><h1><a class="anchor" id="autotoc_md3"></a>
 Example</h1>
 <p >The following subsections outline how to procedurally generate a layout.</p>
