deploy: 8805754e3893e90a20bbbf1219e02ecf0b7ed51d

--- a/index.html
+++ b/index.html
@@ -120,13 +120,16 @@ Samples</h1>
 <p >Sample scenes are available in the project <code>Assets</code> directory. To explore them, clone this repository and open the project in Unity.</p>
 <table style="text-align: center">
 <tr>
+<td width="50%" align="center"><img src="https://github.com/mpewsey/ManiaMap.Unity/assets/23442063/e170235f-df4f-475f-bd2c-bbdc90b464e7" alt="2d layout" width="450" class="inline"/><br  />
+ 2D layout generation sample.  </td><td width="50%" align="center"><img src="https://github.com/mpewsey/ManiaMap.Unity/assets/23442063/04453eaa-6d5f-4aa1-964c-b69b6c307ad8" alt="3d layout" width="450" class="inline"/><br  />
+ 3D layout generation sample.   </td></tr>
+<tr>
 <td width="50%" align="center"><img src="https://github.com/mpewsey/ManiaMap.Unity/assets/23442063/866d377b-0887-42cf-b9fb-1204e3ebce61" alt="layout map book" width="450" class="inline"/><br  />
  Layout tile map book sample with onionskin map display.  </td><td width="50%" align="center"><img src="https://github.com/mpewsey/ManiaMap.Unity/assets/23442063/9891dc70-662c-47c8-93c7-3bdbddbd58b1" alt="layout map" width="450" class="inline"/><br  />
  Layout tile map sample.   </td></tr>
 <tr>
 <td width="50%" align="center"><img src="https://github.com/mpewsey/ManiaMap.Unity/assets/23442063/05fff504-f15d-4c2e-869c-ef59e2e9e4b1" alt="3d layout" width="450" class="inline"/><br  />
- Layout map sample.  </td><td width="50%" align="center"><img src="https://github.com/mpewsey/ManiaMap.Unity/assets/23442063/e170235f-df4f-475f-bd2c-bbdc90b464e7" alt="2d layout" width="450" class="inline"/><br  />
- 2D layout generation sample.   </td></tr>
+ Layout map sample.  </td><td width="50%" align="center"></td></tr>
 </table>
 <h1><a class="anchor" id="autotoc_md5"></a>
 Example</h1>
