deploy: aa4c40a1f9679bbf8e54d616d30db03a5e678048

--- a/md_pages_layout_generation_instructions.html
+++ b/md_pages_layout_generation_instructions.html
@@ -165,7 +165,7 @@ Step 4: Create a Generation Pipeline</h1>
 </ol>
 <div class="fragment"><div class="line">{ExampleGenerationPipelineRunner.cs} </div>
 <div class="line">using MPewsey.ManiaMap;</div>
-<div class="line">using MPewsey.ManiaMapGodot.Generators;</div>
+<div class="line">using MPewsey.ManiaMapUnity.Generators;</div>
 <div class="line"> </div>
 <div class="line">public class ExampleGenerationPipelineRunner : MonoBehaviour</div>
 <div class="line">{</div>
